# ha-friendly-scene-flipper

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  hacs.json  pyproject.toml
.claude/agents/: code-quality-reviewer.md  dev-container-validator.md  docs-reviewer.md  ha-research-advisor.md  test-runner.md
config/: configuration.yaml
config/dashboards/: testing.yaml
custom_components/friendly_scene_flip/: __init__.py  config_flow.py  const.py  manifest.json  select.py  services.yaml  strings.json
custom_components/friendly_scene_flip/translations/: en.json
custom_components/friendly_scene_flipper/: __init__.py  config_flow.py  const.py  manifest.json  select.py  services.yaml  strings.json
custom_components/friendly_scene_flipper/translations/: en.json
docs/: dev-container-testing.md  idea.md  iteration2.md  timepoints.md
tests/: conftest.py  test_config_flow.py  test_flipper.py  test_select.py  test_services.py  test_skipper.py
