[project]
name = "friendly-scene-flipper"
version = "0.2.0"
description = "Home Assistant custom integration that toggles between two scenes"
license = "MIT"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "bandit",
    "pytest",
    "pytest-homeassistant-custom-component",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.friendly_scene_flipper"]
